--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="robots" content="index,follow,noodp" />
+    <meta http-equiv="Cache-Control" content="max-age=120"/>
+    <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=UTF-8"/>
+    <meta http-equiv="Expires" content="Fri, 31 Dec 2021 00:00:00 GMT"/>
 
     <title>Aphrodite By Rachel</title>
     <meta name="description" content="description for the website">
